Done with the api in whole but need to mk som chan
